# flavour_graph

./: .gitignore  DEVELOPMENT.md  GENERATE_FILES.md  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  TROUBLESHOOTING.md  animate_selection.py  convert_sales_to_user_pattern.py  embeddings.py  find_similar_products.py  generate_interactive_html.py  generate_interactive_html_fast.py  generate_interactive_html_optimized.py  interactive_selection.py  main.py  models.py  pyproject.toml  requirements.txt  run_embeddings.py  run_interactive.py  run_visualization.py  save_animation.py  setup.py  subcategory_colors.py  test_connections.py  visualize.py
scripts/: test_connections.py
src/: __init__.py  config.py
src/core/: README.md  __init__.py  connections.py  data_loaders.py  edge_weights.py  graph_setup.py  main.py.backup  models.py  parsers.py  selection_algorithm.py  subcategory_colors.py
src/embeddings/: EMBEDDINGS_EXPLAINED.md  README.md  __init__.py  embeddings.py  find_similar.py
src/interactive/: README.md  __init__.py  generate_html.py
src/visualization/: README.md  __init__.py  visualize.py
