[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flavour-graph"
version = "0.1.0"
description = "Product graph system for analyzing product relationships using NetworkX and embeddings"
readme = "README.md"
authors = [
    {name = "Adam Nielsen"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "node2vec>=0.4.6",
    "gensim>=4.3.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ipython>=8.0",
]

[project.urls]
Homepage = "https://github.com/Adamniels/flavour_graph"
Repository = "https://github.com/Adamniels/flavour_graph"
Issues = "https://github.com/Adamniels/flavour_graph/issues"

[tool.setuptools]
packages = ["src", "src.core", "src.embeddings", "src.interactive", "src.visualization"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.xlsx", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | output
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "build",
    "dist",
    "output",
]
